CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(PROXY_CLIENT)

# silence policy CMP0042 warning by enabling RPATH explicitly
IF(APPLE AND NOT DEFINED CMAKE_MACOSX_RPATH)
	SET(CMAKE_MACOSX_RPATH TRUE)
ENDIF()

FIND_PACKAGE(Boost REQUIRED COMPONENTS system thread)
FIND_PACKAGE(OpenSSL REQUIRED)
INCLUDE_DIRECTORIES(
	${Boost_INCLUDE_DIRS}
	${OPENSSL_INCLUDE_DIR}
)

AUX_SOURCE_DIRECTORY(. PROXY_CLIENT_SOURCES)
ADD_EXECUTABLE(proxy_client ${PROXY_CLIENT_SOURCES})
TARGET_LINK_LIBRARIES(proxy_client
	${Boost_LIBRARIES}
	${OPENSSL_CRYPTO_LIBRARY}
)

INSTALL(TARGETS proxy_client DESTINATION bin)
